@@ -1,3 +1,7 @@
+2011-05-29  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/ext/wallpaper.jl: added option to pass extra
+	arguements to wallpaper-setter
+
 2011-05-28  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/gtk/widgets/file.jl: ported 'file widget to
 	gtk-file-chooser-button
